--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "dev-offline": "sls offline start",
+    "dev": "serverless deploy --stage dev",
+    "deploy": "serverless deploy"
   },
   "repository": {
     "type": "git",
@@ -18,11 +21,14 @@
   },
   "homepage": "https://github.com/angelica-08/active-campaign-integration#readme",
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.107",
     "@types/aws-sdk": "^2.7.0",
     "@types/jest": "^29.1.2",
     "@types/node": "^18.8.5",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
+    "aws-sdk": "^2.1234.0",
     "axios": "^1.1.2",
     "eslint": "^8.25.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
@@ -31,10 +37,18 @@
     "eslint-plugin-promise": "^6.1.0",
     "jest": "^29.2.0",
     "prettier": "^2.7.1",
+    "serverless": "^3.23.0",
+    "serverless-dynamodb-local": "^0.2.40",
+    "serverless-offline": "^11.1.3",
+    "serverless-offline-ssm": "^6.2.0",
     "serverless-webpack": "^5.10.0",
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
-    "webpack": "^5.74.0"
+    "webpack": "^5.74.0",
+    "webpack-node-externals": "^3.0.0"
+  },
+  "dependencies": {
+    "@aws-crypto/client-node": "^3.1.1"
   }
 }
